Projet.output
Terminals unused in grammar

   ENTIERERROR
   AND
   OR
   NOT
   GUILLEMET
   ERREUR


État 101conflits: 1 décalage/réduction


Grammaire

    0 $accept: Program $end

    1 Program: MAINPRGM IDF PVG declaration_part BEGINPG OUVEREBLOC instructions FERMETBLOC ENDPG PVG

    2 declaration_part: VAR declaration_list

    3 declaration_list: declaration
    4                 | declaration_list declaration

    5 declaration: declaration_variables
    6            | declaration_tableau
    7            | declaration_constantes

    8 declaration_variables: LET liste_idf DEUXPOINT type PVG

    9 liste_idf: liste_idf VRG IDF
   10          | IDF

   11 type: TYPEINT
   12     | TYPEFLOAT

   13 declaration_tableau: LET liste_idf DEUXPOINT CROCHETOUVERT ENTIER CROCHETFERME DEUXPOINT type PVG

   14 declaration_constantes: ATDEF CONST IDF DEUXPOINT type EGAL valeur_const PVG

   15 valeur_const: ENTIER
   16             | FLOAT
   17             | ENTIERSIGNE

   18 instructions: instructions instruction
   19             | instruction

   20 instruction: affectation PVG
   21            | condition
   22            | boucle
   23            | input PVG
   24            | output PVG

   25 affectation: IDF AFFECTATION expression
   26            | IDF CROCHETOUVERT expression CROCHETFERME AFFECTATION expression

   27 condition: IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC
   28          | IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC ELSE OUVEREBLOC instructions FERMETBLOC

   29 comparaison: EQ
   30            | NEQ
   31            | IE
   32            | SE
   33            | I
   34            | S

   35 boucle: boucle_do
   36       | boucle_for

   37 boucle_do: DO OUVEREBLOC instructions FERMETBLOC WHILE PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME PVG

   38 boucle_for: FOR IDF FROM expression TO expression STEP expression OUVEREBLOC instructions FERMETBLOC

   39 input: INPUT PARENTHESEOUVERT VAR_IDF PARENTHESEFERME

   40 output: OUTPUT PARENTHESEOUVERT text_or_idf PARENTHESEFERME

   41 text_or_idf: CHAINE
   42            | VAR_IDF
   43            | text_or_idf VRG text_or_idf

   44 expression: expression PLUS expression
   45           | expression MINUS expression
   46           | expression TIMES expression
   47           | expression DIV expression
   48           | PARENTHESEOUVERT expression PARENTHESEFERME
   49           | IDF
   50           | ENTIERSIGNE
   51           | FLOAT
   52           | ENTIER


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
MAINPRGM (258) 1
VAR (259) 2
BEGINPG (260) 1
ENDPG (261) 1
LET (262) 8 13
ATDEF (263) 14
CONST (264) 14
INPUT (265) 39
OUTPUT (266) 40
TYPEINT (267) 11
TYPEFLOAT (268) 12
ENTIER (269) 13 15 52
ENTIERSIGNE (270) 17 50
FLOAT (271) 16 51
ENTIERERROR (272)
IDF (273) 1 9 10 14 25 26 38 49
PLUS (274) 44
MINUS (275) 45
TIMES (276) 46
DIV (277) 47
AND (278)
OR (279)
NOT (280)
EQ (281) 29
NEQ (282) 30
IE (283) 31
SE (284) 32
I (285) 33
S (286) 34
OUVEREBLOC (287) 1 27 28 37 38
FERMETBLOC (288) 1 27 28 37 38
CROCHETOUVERT (289) 13 26
CROCHETFERME (290) 13 26
PARENTHESEOUVERT (291) 27 28 37 39 40 48
PARENTHESEFERME (292) 27 28 37 39 40 48
PVG (293) 1 8 13 14 20 23 24 37
DEUXPOINT (294) 8 13 14
VRG (295) 9 43
GUILLEMET (296)
EGAL (297) 14
AFFECTATION (298) 25 26
ERREUR (299)
IF (300) 27 28
THEN (301) 27 28
ELSE (302) 28
DO (303) 37
WHILE (304) 37
FOR (305) 38
FROM (306) 38
TO (307) 38
STEP (308) 38
CHAINE (309) 41
VAR_IDF (310) 39 42


Non-terminaux, suivis des règles où ils apparaissent

$accept (56)
    à gauche: 0
Program (57)
    à gauche: 1, à droite: 0
declaration_part (58)
    à gauche: 2, à droite: 1
declaration_list (59)
    à gauche: 3 4, à droite: 2 4
declaration (60)
    à gauche: 5 6 7, à droite: 3 4
declaration_variables (61)
    à gauche: 8, à droite: 5
liste_idf (62)
    à gauche: 9 10, à droite: 8 9 13
type (63)
    à gauche: 11 12, à droite: 8 13 14
declaration_tableau (64)
    à gauche: 13, à droite: 6
declaration_constantes (65)
    à gauche: 14, à droite: 7
valeur_const (66)
    à gauche: 15 16 17, à droite: 14
instructions (67)
    à gauche: 18 19, à droite: 1 18 27 28 37 38
instruction (68)
    à gauche: 20 21 22 23 24, à droite: 18 19
affectation (69)
    à gauche: 25 26, à droite: 20
condition (70)
    à gauche: 27 28, à droite: 21
comparaison (71)
    à gauche: 29 30 31 32 33 34, à droite: 27 28 37
boucle (72)
    à gauche: 35 36, à droite: 22
boucle_do (73)
    à gauche: 37, à droite: 35
boucle_for (74)
    à gauche: 38, à droite: 36
input (75)
    à gauche: 39, à droite: 23
output (76)
    à gauche: 40, à droite: 24
text_or_idf (77)
    à gauche: 41 42 43, à droite: 40 43
expression (78)
    à gauche: 44 45 46 47 48 49 50 51 52, à droite: 25 26 27 28 37
    38 44 45 46 47 48


état 0

    0 $accept: . Program $end
    1 Program: . MAINPRGM IDF PVG declaration_part BEGINPG OUVEREBLOC instructions FERMETBLOC ENDPG PVG

    MAINPRGM  décalage et aller à l'état 1

    Program  aller à l'état 2


état 1

    1 Program: MAINPRGM . IDF PVG declaration_part BEGINPG OUVEREBLOC instructions FERMETBLOC ENDPG PVG

    IDF  décalage et aller à l'état 3


état 2

    0 $accept: Program . $end

    $end  décalage et aller à l'état 4


état 3

    1 Program: MAINPRGM IDF . PVG declaration_part BEGINPG OUVEREBLOC instructions FERMETBLOC ENDPG PVG

    PVG  décalage et aller à l'état 5


état 4

    0 $accept: Program $end .

    $défaut  accepter


état 5

    1 Program: MAINPRGM IDF PVG . declaration_part BEGINPG OUVEREBLOC instructions FERMETBLOC ENDPG PVG
    2 declaration_part: . VAR declaration_list

    VAR  décalage et aller à l'état 6

    declaration_part  aller à l'état 7


état 6

    2 declaration_part: VAR . declaration_list
    3 declaration_list: . declaration
    4                 | . declaration_list declaration
    5 declaration: . declaration_variables
    6            | . declaration_tableau
    7            | . declaration_constantes
    8 declaration_variables: . LET liste_idf DEUXPOINT type PVG
   13 declaration_tableau: . LET liste_idf DEUXPOINT CROCHETOUVERT ENTIER CROCHETFERME DEUXPOINT type PVG
   14 declaration_constantes: . ATDEF CONST IDF DEUXPOINT type EGAL valeur_const PVG

    LET    décalage et aller à l'état 8
    ATDEF  décalage et aller à l'état 9

    declaration_list        aller à l'état 10
    declaration             aller à l'état 11
    declaration_variables   aller à l'état 12
    declaration_tableau     aller à l'état 13
    declaration_constantes  aller à l'état 14


état 7

    1 Program: MAINPRGM IDF PVG declaration_part . BEGINPG OUVEREBLOC instructions FERMETBLOC ENDPG PVG

    BEGINPG  décalage et aller à l'état 15


état 8

    8 declaration_variables: LET . liste_idf DEUXPOINT type PVG
    9 liste_idf: . liste_idf VRG IDF
   10          | . IDF
   13 declaration_tableau: LET . liste_idf DEUXPOINT CROCHETOUVERT ENTIER CROCHETFERME DEUXPOINT type PVG

    IDF  décalage et aller à l'état 16

    liste_idf  aller à l'état 17


état 9

   14 declaration_constantes: ATDEF . CONST IDF DEUXPOINT type EGAL valeur_const PVG

    CONST  décalage et aller à l'état 18


état 10

    2 declaration_part: VAR declaration_list .  [BEGINPG]
    4 declaration_list: declaration_list . declaration
    5 declaration: . declaration_variables
    6            | . declaration_tableau
    7            | . declaration_constantes
    8 declaration_variables: . LET liste_idf DEUXPOINT type PVG
   13 declaration_tableau: . LET liste_idf DEUXPOINT CROCHETOUVERT ENTIER CROCHETFERME DEUXPOINT type PVG
   14 declaration_constantes: . ATDEF CONST IDF DEUXPOINT type EGAL valeur_const PVG

    LET    décalage et aller à l'état 8
    ATDEF  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 2 (declaration_part)

    declaration             aller à l'état 19
    declaration_variables   aller à l'état 12
    declaration_tableau     aller à l'état 13
    declaration_constantes  aller à l'état 14


état 11

    3 declaration_list: declaration .

    $défaut  réduction par utilisation de la règle 3 (declaration_list)


état 12

    5 declaration: declaration_variables .

    $défaut  réduction par utilisation de la règle 5 (declaration)


état 13

    6 declaration: declaration_tableau .

    $défaut  réduction par utilisation de la règle 6 (declaration)


état 14

    7 declaration: declaration_constantes .

    $défaut  réduction par utilisation de la règle 7 (declaration)


état 15

    1 Program: MAINPRGM IDF PVG declaration_part BEGINPG . OUVEREBLOC instructions FERMETBLOC ENDPG PVG

    OUVEREBLOC  décalage et aller à l'état 20


état 16

   10 liste_idf: IDF .

    $défaut  réduction par utilisation de la règle 10 (liste_idf)


état 17

    8 declaration_variables: LET liste_idf . DEUXPOINT type PVG
    9 liste_idf: liste_idf . VRG IDF
   13 declaration_tableau: LET liste_idf . DEUXPOINT CROCHETOUVERT ENTIER CROCHETFERME DEUXPOINT type PVG

    DEUXPOINT  décalage et aller à l'état 21
    VRG        décalage et aller à l'état 22


état 18

   14 declaration_constantes: ATDEF CONST . IDF DEUXPOINT type EGAL valeur_const PVG

    IDF  décalage et aller à l'état 23


état 19

    4 declaration_list: declaration_list declaration .

    $défaut  réduction par utilisation de la règle 4 (declaration_list)


état 20

    1 Program: MAINPRGM IDF PVG declaration_part BEGINPG OUVEREBLOC . instructions FERMETBLOC ENDPG PVG
   18 instructions: . instructions instruction
   19             | . instruction
   20 instruction: . affectation PVG
   21            | . condition
   22            | . boucle
   23            | . input PVG
   24            | . output PVG
   25 affectation: . IDF AFFECTATION expression
   26            | . IDF CROCHETOUVERT expression CROCHETFERME AFFECTATION expression
   27 condition: . IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC
   28          | . IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC ELSE OUVEREBLOC instructions FERMETBLOC
   35 boucle: . boucle_do
   36       | . boucle_for
   37 boucle_do: . DO OUVEREBLOC instructions FERMETBLOC WHILE PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME PVG
   38 boucle_for: . FOR IDF FROM expression TO expression STEP expression OUVEREBLOC instructions FERMETBLOC
   39 input: . INPUT PARENTHESEOUVERT VAR_IDF PARENTHESEFERME
   40 output: . OUTPUT PARENTHESEOUVERT text_or_idf PARENTHESEFERME

    INPUT   décalage et aller à l'état 24
    OUTPUT  décalage et aller à l'état 25
    IDF     décalage et aller à l'état 26
    IF      décalage et aller à l'état 27
    DO      décalage et aller à l'état 28
    FOR     décalage et aller à l'état 29

    instructions  aller à l'état 30
    instruction   aller à l'état 31
    affectation   aller à l'état 32
    condition     aller à l'état 33
    boucle        aller à l'état 34
    boucle_do     aller à l'état 35
    boucle_for    aller à l'état 36
    input         aller à l'état 37
    output        aller à l'état 38


état 21

    8 declaration_variables: LET liste_idf DEUXPOINT . type PVG
   11 type: . TYPEINT
   12     | . TYPEFLOAT
   13 declaration_tableau: LET liste_idf DEUXPOINT . CROCHETOUVERT ENTIER CROCHETFERME DEUXPOINT type PVG

    TYPEINT        décalage et aller à l'état 39
    TYPEFLOAT      décalage et aller à l'état 40
    CROCHETOUVERT  décalage et aller à l'état 41

    type  aller à l'état 42


état 22

    9 liste_idf: liste_idf VRG . IDF

    IDF  décalage et aller à l'état 43


état 23

   14 declaration_constantes: ATDEF CONST IDF . DEUXPOINT type EGAL valeur_const PVG

    DEUXPOINT  décalage et aller à l'état 44


état 24

   39 input: INPUT . PARENTHESEOUVERT VAR_IDF PARENTHESEFERME

    PARENTHESEOUVERT  décalage et aller à l'état 45


état 25

   40 output: OUTPUT . PARENTHESEOUVERT text_or_idf PARENTHESEFERME

    PARENTHESEOUVERT  décalage et aller à l'état 46


état 26

   25 affectation: IDF . AFFECTATION expression
   26            | IDF . CROCHETOUVERT expression CROCHETFERME AFFECTATION expression

    CROCHETOUVERT  décalage et aller à l'état 47
    AFFECTATION    décalage et aller à l'état 48


état 27

   27 condition: IF . PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC
   28          | IF . PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC ELSE OUVEREBLOC instructions FERMETBLOC

    PARENTHESEOUVERT  décalage et aller à l'état 49


état 28

   37 boucle_do: DO . OUVEREBLOC instructions FERMETBLOC WHILE PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME PVG

    OUVEREBLOC  décalage et aller à l'état 50


état 29

   38 boucle_for: FOR . IDF FROM expression TO expression STEP expression OUVEREBLOC instructions FERMETBLOC

    IDF  décalage et aller à l'état 51


état 30

    1 Program: MAINPRGM IDF PVG declaration_part BEGINPG OUVEREBLOC instructions . FERMETBLOC ENDPG PVG
   18 instructions: instructions . instruction
   20 instruction: . affectation PVG
   21            | . condition
   22            | . boucle
   23            | . input PVG
   24            | . output PVG
   25 affectation: . IDF AFFECTATION expression
   26            | . IDF CROCHETOUVERT expression CROCHETFERME AFFECTATION expression
   27 condition: . IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC
   28          | . IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC ELSE OUVEREBLOC instructions FERMETBLOC
   35 boucle: . boucle_do
   36       | . boucle_for
   37 boucle_do: . DO OUVEREBLOC instructions FERMETBLOC WHILE PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME PVG
   38 boucle_for: . FOR IDF FROM expression TO expression STEP expression OUVEREBLOC instructions FERMETBLOC
   39 input: . INPUT PARENTHESEOUVERT VAR_IDF PARENTHESEFERME
   40 output: . OUTPUT PARENTHESEOUVERT text_or_idf PARENTHESEFERME

    INPUT       décalage et aller à l'état 24
    OUTPUT      décalage et aller à l'état 25
    IDF         décalage et aller à l'état 26
    FERMETBLOC  décalage et aller à l'état 52
    IF          décalage et aller à l'état 27
    DO          décalage et aller à l'état 28
    FOR         décalage et aller à l'état 29

    instruction  aller à l'état 53
    affectation  aller à l'état 32
    condition    aller à l'état 33
    boucle       aller à l'état 34
    boucle_do    aller à l'état 35
    boucle_for   aller à l'état 36
    input        aller à l'état 37
    output       aller à l'état 38


état 31

   19 instructions: instruction .

    $défaut  réduction par utilisation de la règle 19 (instructions)


état 32

   20 instruction: affectation . PVG

    PVG  décalage et aller à l'état 54


état 33

   21 instruction: condition .

    $défaut  réduction par utilisation de la règle 21 (instruction)


état 34

   22 instruction: boucle .

    $défaut  réduction par utilisation de la règle 22 (instruction)


état 35

   35 boucle: boucle_do .

    $défaut  réduction par utilisation de la règle 35 (boucle)


état 36

   36 boucle: boucle_for .

    $défaut  réduction par utilisation de la règle 36 (boucle)


état 37

   23 instruction: input . PVG

    PVG  décalage et aller à l'état 55


état 38

   24 instruction: output . PVG

    PVG  décalage et aller à l'état 56


état 39

   11 type: TYPEINT .

    $défaut  réduction par utilisation de la règle 11 (type)


état 40

   12 type: TYPEFLOAT .

    $défaut  réduction par utilisation de la règle 12 (type)


état 41

   13 declaration_tableau: LET liste_idf DEUXPOINT CROCHETOUVERT . ENTIER CROCHETFERME DEUXPOINT type PVG

    ENTIER  décalage et aller à l'état 57


état 42

    8 declaration_variables: LET liste_idf DEUXPOINT type . PVG

    PVG  décalage et aller à l'état 58


état 43

    9 liste_idf: liste_idf VRG IDF .

    $défaut  réduction par utilisation de la règle 9 (liste_idf)


état 44

   11 type: . TYPEINT
   12     | . TYPEFLOAT
   14 declaration_constantes: ATDEF CONST IDF DEUXPOINT . type EGAL valeur_const PVG

    TYPEINT    décalage et aller à l'état 39
    TYPEFLOAT  décalage et aller à l'état 40

    type  aller à l'état 59


état 45

   39 input: INPUT PARENTHESEOUVERT . VAR_IDF PARENTHESEFERME

    VAR_IDF  décalage et aller à l'état 60


état 46

   40 output: OUTPUT PARENTHESEOUVERT . text_or_idf PARENTHESEFERME
   41 text_or_idf: . CHAINE
   42            | . VAR_IDF
   43            | . text_or_idf VRG text_or_idf

    CHAINE   décalage et aller à l'état 61
    VAR_IDF  décalage et aller à l'état 62

    text_or_idf  aller à l'état 63


état 47

   26 affectation: IDF CROCHETOUVERT . expression CROCHETFERME AFFECTATION expression
   44 expression: . expression PLUS expression
   45           | . expression MINUS expression
   46           | . expression TIMES expression
   47           | . expression DIV expression
   48           | . PARENTHESEOUVERT expression PARENTHESEFERME
   49           | . IDF
   50           | . ENTIERSIGNE
   51           | . FLOAT
   52           | . ENTIER

    ENTIER            décalage et aller à l'état 64
    ENTIERSIGNE       décalage et aller à l'état 65
    FLOAT             décalage et aller à l'état 66
    IDF               décalage et aller à l'état 67
    PARENTHESEOUVERT  décalage et aller à l'état 68

    expression  aller à l'état 69


état 48

   25 affectation: IDF AFFECTATION . expression
   44 expression: . expression PLUS expression
   45           | . expression MINUS expression
   46           | . expression TIMES expression
   47           | . expression DIV expression
   48           | . PARENTHESEOUVERT expression PARENTHESEFERME
   49           | . IDF
   50           | . ENTIERSIGNE
   51           | . FLOAT
   52           | . ENTIER

    ENTIER            décalage et aller à l'état 64
    ENTIERSIGNE       décalage et aller à l'état 65
    FLOAT             décalage et aller à l'état 66
    IDF               décalage et aller à l'état 67
    PARENTHESEOUVERT  décalage et aller à l'état 68

    expression  aller à l'état 70


état 49

   27 condition: IF PARENTHESEOUVERT . expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC
   28          | IF PARENTHESEOUVERT . expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC ELSE OUVEREBLOC instructions FERMETBLOC
   44 expression: . expression PLUS expression
   45           | . expression MINUS expression
   46           | . expression TIMES expression
   47           | . expression DIV expression
   48           | . PARENTHESEOUVERT expression PARENTHESEFERME
   49           | . IDF
   50           | . ENTIERSIGNE
   51           | . FLOAT
   52           | . ENTIER

    ENTIER            décalage et aller à l'état 64
    ENTIERSIGNE       décalage et aller à l'état 65
    FLOAT             décalage et aller à l'état 66
    IDF               décalage et aller à l'état 67
    PARENTHESEOUVERT  décalage et aller à l'état 68

    expression  aller à l'état 71


état 50

   18 instructions: . instructions instruction
   19             | . instruction
   20 instruction: . affectation PVG
   21            | . condition
   22            | . boucle
   23            | . input PVG
   24            | . output PVG
   25 affectation: . IDF AFFECTATION expression
   26            | . IDF CROCHETOUVERT expression CROCHETFERME AFFECTATION expression
   27 condition: . IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC
   28          | . IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC ELSE OUVEREBLOC instructions FERMETBLOC
   35 boucle: . boucle_do
   36       | . boucle_for
   37 boucle_do: . DO OUVEREBLOC instructions FERMETBLOC WHILE PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME PVG
   37          | DO OUVEREBLOC . instructions FERMETBLOC WHILE PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME PVG
   38 boucle_for: . FOR IDF FROM expression TO expression STEP expression OUVEREBLOC instructions FERMETBLOC
   39 input: . INPUT PARENTHESEOUVERT VAR_IDF PARENTHESEFERME
   40 output: . OUTPUT PARENTHESEOUVERT text_or_idf PARENTHESEFERME

    INPUT   décalage et aller à l'état 24
    OUTPUT  décalage et aller à l'état 25
    IDF     décalage et aller à l'état 26
    IF      décalage et aller à l'état 27
    DO      décalage et aller à l'état 28
    FOR     décalage et aller à l'état 29

    instructions  aller à l'état 72
    instruction   aller à l'état 31
    affectation   aller à l'état 32
    condition     aller à l'état 33
    boucle        aller à l'état 34
    boucle_do     aller à l'état 35
    boucle_for    aller à l'état 36
    input         aller à l'état 37
    output        aller à l'état 38


état 51

   38 boucle_for: FOR IDF . FROM expression TO expression STEP expression OUVEREBLOC instructions FERMETBLOC

    FROM  décalage et aller à l'état 73


état 52

    1 Program: MAINPRGM IDF PVG declaration_part BEGINPG OUVEREBLOC instructions FERMETBLOC . ENDPG PVG

    ENDPG  décalage et aller à l'état 74


état 53

   18 instructions: instructions instruction .

    $défaut  réduction par utilisation de la règle 18 (instructions)


état 54

   20 instruction: affectation PVG .

    $défaut  réduction par utilisation de la règle 20 (instruction)


état 55

   23 instruction: input PVG .

    $défaut  réduction par utilisation de la règle 23 (instruction)


état 56

   24 instruction: output PVG .

    $défaut  réduction par utilisation de la règle 24 (instruction)


état 57

   13 declaration_tableau: LET liste_idf DEUXPOINT CROCHETOUVERT ENTIER . CROCHETFERME DEUXPOINT type PVG

    CROCHETFERME  décalage et aller à l'état 75


état 58

    8 declaration_variables: LET liste_idf DEUXPOINT type PVG .

    $défaut  réduction par utilisation de la règle 8 (declaration_variables)


état 59

   14 declaration_constantes: ATDEF CONST IDF DEUXPOINT type . EGAL valeur_const PVG

    EGAL  décalage et aller à l'état 76


état 60

   39 input: INPUT PARENTHESEOUVERT VAR_IDF . PARENTHESEFERME

    PARENTHESEFERME  décalage et aller à l'état 77


état 61

   41 text_or_idf: CHAINE .

    $défaut  réduction par utilisation de la règle 41 (text_or_idf)


état 62

   42 text_or_idf: VAR_IDF .

    $défaut  réduction par utilisation de la règle 42 (text_or_idf)


état 63

   40 output: OUTPUT PARENTHESEOUVERT text_or_idf . PARENTHESEFERME
   43 text_or_idf: text_or_idf . VRG text_or_idf

    PARENTHESEFERME  décalage et aller à l'état 78
    VRG              décalage et aller à l'état 79


état 64

   52 expression: ENTIER .

    $défaut  réduction par utilisation de la règle 52 (expression)


état 65

   50 expression: ENTIERSIGNE .

    $défaut  réduction par utilisation de la règle 50 (expression)


état 66

   51 expression: FLOAT .

    $défaut  réduction par utilisation de la règle 51 (expression)


état 67

   49 expression: IDF .

    $défaut  réduction par utilisation de la règle 49 (expression)


état 68

   44 expression: . expression PLUS expression
   45           | . expression MINUS expression
   46           | . expression TIMES expression
   47           | . expression DIV expression
   48           | . PARENTHESEOUVERT expression PARENTHESEFERME
   48           | PARENTHESEOUVERT . expression PARENTHESEFERME
   49           | . IDF
   50           | . ENTIERSIGNE
   51           | . FLOAT
   52           | . ENTIER

    ENTIER            décalage et aller à l'état 64
    ENTIERSIGNE       décalage et aller à l'état 65
    FLOAT             décalage et aller à l'état 66
    IDF               décalage et aller à l'état 67
    PARENTHESEOUVERT  décalage et aller à l'état 68

    expression  aller à l'état 80


état 69

   26 affectation: IDF CROCHETOUVERT expression . CROCHETFERME AFFECTATION expression
   44 expression: expression . PLUS expression
   45           | expression . MINUS expression
   46           | expression . TIMES expression
   47           | expression . DIV expression

    PLUS          décalage et aller à l'état 81
    MINUS         décalage et aller à l'état 82
    TIMES         décalage et aller à l'état 83
    DIV           décalage et aller à l'état 84
    CROCHETFERME  décalage et aller à l'état 85


état 70

   25 affectation: IDF AFFECTATION expression .  [PVG]
   44 expression: expression . PLUS expression
   45           | expression . MINUS expression
   46           | expression . TIMES expression
   47           | expression . DIV expression

    PLUS   décalage et aller à l'état 81
    MINUS  décalage et aller à l'état 82
    TIMES  décalage et aller à l'état 83
    DIV    décalage et aller à l'état 84

    $défaut  réduction par utilisation de la règle 25 (affectation)


état 71

   27 condition: IF PARENTHESEOUVERT expression . comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC
   28          | IF PARENTHESEOUVERT expression . comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC ELSE OUVEREBLOC instructions FERMETBLOC
   29 comparaison: . EQ
   30            | . NEQ
   31            | . IE
   32            | . SE
   33            | . I
   34            | . S
   44 expression: expression . PLUS expression
   45           | expression . MINUS expression
   46           | expression . TIMES expression
   47           | expression . DIV expression

    PLUS   décalage et aller à l'état 81
    MINUS  décalage et aller à l'état 82
    TIMES  décalage et aller à l'état 83
    DIV    décalage et aller à l'état 84
    EQ     décalage et aller à l'état 86
    NEQ    décalage et aller à l'état 87
    IE     décalage et aller à l'état 88
    SE     décalage et aller à l'état 89
    I      décalage et aller à l'état 90
    S      décalage et aller à l'état 91

    comparaison  aller à l'état 92


état 72

   18 instructions: instructions . instruction
   20 instruction: . affectation PVG
   21            | . condition
   22            | . boucle
   23            | . input PVG
   24            | . output PVG
   25 affectation: . IDF AFFECTATION expression
   26            | . IDF CROCHETOUVERT expression CROCHETFERME AFFECTATION expression
   27 condition: . IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC
   28          | . IF PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME THEN OUVEREBLOC instructions FERMETBLOC ELSE OUVEREBLOC instructions FERMETBLOC
   35 boucle: . boucle_do
   36       | . boucle_for
   37 boucle_do: . DO OUVEREBLOC instructions FERMETBLOC WHILE PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME PVG
   37          | DO OUVEREBLOC instructions . FERMETBLOC WHILE PARENTHESEOUVERT expression comparaison expression PARENTHESEFERME PVG
   38 boucle_for: . FOR IDF FROM expression TO expression STEP expression OUVEREBLOC instructions FERMETBLOC
   39 input: . INPUT PARENTHESEOUVERT VAR_IDF PARENTHESEFERME
   40 output: . OUTPUT PARENTHESEOUVERT text_or_idf PARENTHESEFERME

    INPUT       décalage et aller à l'état 24
    OUTPUT      décalage et aller à l'état 25
    IDF         décalage et aller à l'état 26
    FERMETBLOC  décalage et aller à l'état 93
    IF          décalage et aller à l'état 27
    DO          décalage et aller à l'état 28
    FOR         décalage et aller à l'état 29

    instruction  aller à l'état 53
    affectation  aller à l'état 32
    condition    aller à l'état 33
    boucle       aller à l'état 34
    boucle_do    aller à l'état 35
    boucle_for   aller à l'état 36
    input        aller à l'état 37
    output       aller à l'état 38


état 73

   38 boucle_for: FOR IDF FROM . expression TO expression STEP expression OUVEREBLOC instructions FERMETBLOC
   44 expression: . expression PLUS expression
   45           | . expression MINUS expression
   46           | . expression TIMES expression
   47           | . expression DIV expression
   48           | . PARENTHESEOUVERT expression PARENTHESEFERME
   49           | . IDF
   50           | . ENTIERSIGNE
   51           | . FLOAT
   52           | . ENTIER

    ENTIER            décalage et aller à l'état 64
    ENTIERSIGNE       décalage et aller à l'état 65
    FLOAT             décalage et aller à l'état 66
    IDF               décalage et aller à l'état 67
    PARENTHESEOUVERT  décalage et aller à l'état 68

    expression  aller à l'état 94


état 74

    1 Program: MAINPRGM IDF PVG declaration_part BEGINPG OUVEREBLOC instructions FERMETBLOC ENDPG . PVG

    PVG  décalage et aller à l'état 95


état 75

   13 declaration_tableau: LET liste_idf DEUXPOINT CROCHETOUVERT ENTIER CROCHETFERME . DEUXPOINT type PVG

    DEUXPOINT  décalage et aller à l'état 96


état 76

   14 declaration_constantes: ATDEF CONST IDF DEUXPOINT type EGAL . valeur_const PVG
   15 valeur_const: . ENTIER
   16             | . FLOAT
   17             | . ENTIERSIGNE

    ENTIER       décalage et aller à l'état 97
    ENTIERSIGNE  décalage et aller à l'état 98
    FLOAT        décalage et aller à l'état 99

    valeur_const  aller à l'état 100


état 77

   39 input: INPUT PARENTHESEOUVERT VAR_IDF PARENTHESEFERME .

    $défaut  réduction par utilisation de la règle 39 (input)


état 78

   40 output: OUTPUT PARENTHESEOUVERT text_or_idf PARENTHESEFERME .

    $défaut  réduction par utilisation de la règle 40 (output)


état 79

   41 text_or_idf: . CHAINE
   42            | . VAR_IDF
   43            | . text_or_idf VRG text_or_idf
   43            | text_or_idf VRG . text_or_idf

    CHAINE   décalage et aller à l'état 61
    VAR_IDF  décalage et aller à l'état 62

    text_or_idf  aller à l'état 101


état 80

   44 expression: expression . PLUS expression
   45           | expression . MINUS expression
   46           | expression . TIMES expression
   47           | expression . DIV expression
   48           | PARENTHESEOUVERT expression . PARENTHESEFERME

    PLUS             décalage et aller à l'état 81
    MINUS            décalage et aller à l'état 82
    TIMES            décalage et aller à l'état 83
    DIV              décalage et aller à l'état 84
    PARENTHESEFERME  décalage et aller à l'état 102


état 81

   44 expression: . expression PLUS expression
   44           | expression PLUS . expression
   45           | . expression MINUS expression
   46           | . expression TIMES expression
   47           | . expression DIV expression
   48           | . PARENTHESEOUVERT expression PARENTHESEFERME
   49           | . IDF
   50           | . ENTIERSIGNE
   51           | . FLOAT
   52           | . ENTIER

    ENTIER            décalage et aller à l'état 64
    ENTIERSIGNE       décalage et aller à l'état 65
    FLOAT             décalage et aller à l'état 66
    IDF               décalage et aller à l'état 67
    PARENTHESEOUVERT  décalage et aller à l'état 68

    expression  aller à l'état 103


état 82

   44 expression: . expression PLUS expression
   45           | . expression MINUS expression
   45           | expression MINUS . expression
   46           | . expression TIMES expression
   47           | . expression DIV expression
   48           | . PARENTHESEOUVERT expression PARENTHESEFERME
   49           | . IDF
   50           | . ENTIERSIGNE
   51           | . FLOAT
   52           | . ENTIER

    ENTIER            décalage et aller à l'état 64
    ENTIERSIGNE       décalage et aller à l'état 65
    FLOAT             décalage et aller à l'état 66
    IDF               décalage et aller à l'état 67
    PARENTHESEOUVERT  décalage et aller à l'état 68

    expression  aller à l'état 104


état 83

   44 expression: . expression PLUS expression
   45           | . expression MINUS expression
   46           | . expression TIMES expression
   46           | expression TIMES . expression
   47           | . expression DIV expression
   48           | . PARENTHESEOUVERT expression PARENTHESEFERME
   49           | . IDF
   50           | . ENTIERSIGNE
   51           | . FLOAT
   52           | . ENTIER

    ENTIER            décalage et aller à l'état 64
    ENTIERSIGNE       décalage et aller à l'état 65
    FLOAT             décalage et aller à l'état 66
    IDF               décalage et aller à l'état 67
    PARENTHESEOUVERT  décalage et aller à l'état 68

    expression  aller à l'état 105


état 84
